--- a/templates/hotels.html
+++ b/templates/hotels.html
@@ -6,20 +6,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hotels</title>
+    <style>
+        th {
+            background-color: white;
+        }
+        table, td, th {
+            border: 4px solid midnightblue;
+            padding: 50px;
+        }
+        td, th {
+            text-align:center;
+            color: midnightblue;
+            font-size: 20px;
+        }
+        table{
+            width: 75%;
+            margin: auto;
+        }
+
+    </style>
 </head>
 <body>
 <form action="/hotels/" method="POST">
     <input type="text" placeholder="Enter location" name='keyword'>
     <button type="submit">Get Hotels</button>
 </form>
+<table>
+    <tr>
+        <th>GeoID</th>
+        <th>Hotel Name</th>
+    </tr>
     {% for suggestion in results.suggestions %}
         {% for entities in suggestion.entities %}
-            <div>
-                {{entities.name}}
-            </div>
+            <tr>
+                <td>{{entities.geoId}}</td>
+                <td>{{entities.name}}</td>
+            </tr>
         {% endfor %}
     {% endfor %}
+</table>
 </body>
 </html>
 
