made changes to the picture and tried adding stuff to make the font show up on top of the picture

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,22 +6,45 @@
 {% block body %}
 
 <h1 id="mainheader"> Expeditions </h1>
+<h1 id="catchphrase"> create memories and travel organized to various destinations around the world </h1>
+<img id="indexmainpic"src="/static/indexmainpic.PNG" alt="Index main" height="550" width="850">
+
 
 <style>
+    #indexmainpic {
+        padding-top: 80px;
+        position: absolute;
+        left: 225px;
+        bottom: 4%;
+    }
     html,body{
         background-color: #B99976;
     }
     #mainheader {
-    position: absolute;
-    top: 5%;
-    font-size:250px;
-    padding-top: 130px;
-    selfalign: center;
-    left: 40px;
-    color: black;
-    font-family: "Times New Roman";
-}
-
+        position: absolute;
+        top: 5%;
+        font-size:120px;
+        padding-top: 130px;
+        selfalign: center;
+        left: 335px;
+        color: black;
+        font-family: "Times New Roman";
+    }
+    container {
+        position: absolute;
+        text-align: center;
+        color: black;
+    }
+    #catchphrase {
+        position: absolute;
+        top: 35%;
+        font-size:20px;
+        padding-top: 130px;
+        selfalign: center;
+        left: 325px;
+        color: black;
+        font-family: "Times New Roman";
+    }
 </style>
 
 
