--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,18 +16,24 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('brian') }}>Brian</a>
             <a class="nav-link" href={{ url_for('photogallery') }}>Photography</a>
             <a class="nav-link" href={{ url_for('weather') }}>Weather</a>
+            <a class="nav-link" href={{ url_for('hotels') }}>Hotel</a>
+            <a class="nav-link" href={{ url_for('maps') }}>Map</a>
             <a class="nav-link" href={{ url_for('crud.crud') }}>Crud</a>
-            <a class="nav-link" href={{ url_for('hotels') }}>Hotels</a>
             <a class="nav-link" href={{ url_for('crud.search') }}>Search</a>
+
+            <form class="form-inline" onsubmit="alert('it works')">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
         <ul class="nav navbar-nav">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarSupportedContent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Crud
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Databases
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarSupportedContent">
-                    <a class="dropdown-menu" href={{ url_for('crud.crud') }}>Crud</a>
-                    <a class="dropdown-menu" href={{ url_for('crud.search') }}>Search</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="nav-link" href={{ url_for('crud.search') }}>SQL Search</a>
+                    <a class="nav-link" href={{ url_for('crud.crud') }}>SQL Crud </a>
                 </div>
             </li>
         </ul>
