--- a/templates/home.html
+++ b/templates/home.html
@@ -1,62 +1,38 @@
-<body>
-<html>
 {% include "layouts/navbar.html" %}
 
 {% block body %}
 
     <html>
     <head>
+        <title>Resources</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <style>
-            body {
-              background-image: url('/static/background.jpeg');
-            }
-
-            h1 {
-                color: black;
-                text-align: center;
-                font-family: "Baskerville";
-                font-size: 70px;
-            }
-
-
-        </style>
 
     </head>
     <br>
-
+    <body onload="myFunction()">
     <h1>Student Resources</h1>
     <br>
     <br>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <title>Resources</title>
-
-    </head>
-    <body>
-
-    <div class="container">
+    <div style="display:none;" id="myDiv" class="container animate-bottom">
         <div class="jumbotron">
             <h1>Other Sites & Info </h1>
             <p> There are many other sites full of info about stress relief, relaxation, and other resources. We've organized them into neat categories for you! </p>
         </div>
-        <div style="font-size: xx-large; text-align: center">
-        <p> <a style="font-family: Baskerville" href="/stress">Stress Relief</a> </p>
-        <p> <a style="font-family: Baskerville" href="/study">Study Hall</a> </p>
-        <p> <a style="font-family: Baskerville" href="/volunteer">Volunteer!</a> </p>
+        <div style="font-size: xx-large; text-align: center; font-family: Baskerville">
+        <p> <a href="/stress">Stress Relief</a> </p>
+        <p> <a href="/study">Study Hall</a> </p>
+        <p> <a href="/volunteer">Volunteer!</a> </p>
         </div>
     </div>
-
     </body>
     </html>
 
-    {% endblock %}
+{% endblock %}
 
-{% block background %}</html>
+{% block background %}
 
 {% endblock %}
