--- a/templates/study.html
+++ b/templates/study.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<body>
+
 {% include "layouts/navbar.html" %}
-<title>Study Hall</title>
-<body style="font-family: Baskerville" </body>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Study Hall</title>
 </head>
 {%  block body %}
-<body>
+<body onload="myFunction()">
 
-<div class="container-fluid">
+<div class="container-fluid animate-bottom">
     <h1 style="text-align: center">Study Hall</h1>
     <div class="row">
         <div class="col-sm-6">
