--- a/templates/dark.html
+++ b/templates/dark.html
@@ -1,16 +1,13 @@
 
 {% include "layouts/navbar.html" %}
 <title>Dark Mode</title>
-<body style="font-family: Baskerville" </body>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
     <link rel="stylesheet" href="static/scss/main.css">
-
 </head>
-<body>
-<div class="container">
+<body onload="myFunction()">
+<div class="container animate-bottom">
     <h3>Light / Dark Mode</h3>
     <div class="toggle-container">
         <input type="checkbox" id="switch" name="theme"><label for="switch">Toggle</label>
