--- a/templates/stress.html
+++ b/templates/stress.html
@@ -1,12 +1,10 @@
-<body>
 {% include "layouts/navbar.html" %}
 <title>Stress Relief</title>
-<body style="font-family: Baskerville" </body>
+
 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Stress Relief</title>
 </head>
 <style>
 .button {
@@ -23,9 +21,9 @@
 .button1 {background-color: #F5B7B1;} /* Green */
 </style>
 {%  block body %} <!-- Code from Punnu -->
-<body>
-<div class="container-fluid">
-    <h1 style="text-align: center">Relaxation</h1>
+<body onload="myFunction()">
+<div class="container-fluid animate-bottom">
+    <h1 style="text-align: center">Stress Relief & Relaxation</h1>
     <div class="row">
         <div class="col-sm-6">
             <p style="font-size: x-large">
