--- a/templates/pbl/attractions.html
+++ b/templates/pbl/attractions.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base.html" %}
 {% set project = "Attractions" %}
-
+<h1>Popular Attractions from around the world!</h1>
 {% block body %}
 {% endblock %}
