--- a/templates/aboutjames.html
+++ b/templates/aboutjames.html
@@ -1,34 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-{%  extends "layouts/base.html" %}
-{%  set project = "James" %}
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>James</title>
+    <style>
+        html, body{
+            background-color: rebeccapurple;
+        }
+        .dark-mode {
+            background-color: #35363a;
+            color: #b3b3b3;
+            border: 3px white;
+        }
+        button.task {
+            margin-top: 5px;
+            font-family: Raleway;
+            padding: 6px 14px;
+            border-radius: 6px;
+            color: #3D3D3D;
+            background: #fff;
+            border: 1px solid white;
+            box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            transition-duration: 0.4s;
+        }
+    </style>
 </head>
-{%  block body %}
-    <body>
-    <div class="row">
+<body>
+<div class="row">
     <div class="col-sm">
-        <h1>Nathan</h1>
+        <h1>James</h1>
         <img src="/static/assets/james1.jpg" width="50%"  id="jamesimg" onclick="jamesImg()" >
     </div>
     <div class="col-sm">
         <h1>API</h1>
+        <p>Name</p>
+        <div id="name"></div>
+        <br>
+        <p>Id</p>
+        <div id="idea"></div>
+        <br>
+        <p>Restaurant</p>
+        <div id="restaurant"></div>
+        <br>
+        <p>Description</p>
+        <div id="description"></div>
+        <br>
+        <h1>Links</h1>
+        <a href="https://docs.google.com/document/d/1243B2mbRGslTk-0YRXKdKykfs6fAU5pK1LFUyJQ83vM/edit">Create Task Planning</a>
+        <br>
+        <a href="https://docs.google.com/document/d/1iWY0JFOhnv8dLGOX7WXPdvvbnUYI_WglTmJvhG3r4QQ/edit">Journal</a><br>
+        <button onclick="toggleMode()">Toggle Dark Mode</button>
+
+        <script>
+            async function getburger() {
+                const response = await fetch("https://burgers1.p.rapidapi.com/burgers", {
+                    "method": "GET",
+                    "headers": {
+                        'x-rapidapi-host': 'burgers1.p.rapidapi.com',
+                        'x-rapidapi-key': 'a2517cf9bdmshb3cb60d57e2fe79p1f907fjsna7217b3dedc7',
+                    }
+                })
+                console.log(response);
+                const burger = await response.json();
+                console.log(burger);
+                const burgerinfo = burger[0];
+                document.getElementById("name").textContent = burgerinfo["name"];
+                document.getElementById("idea").textContent = burgerinfo["id"];
+                document.getElementById("restaurant").textContent = burgerinfo["restaurant"];
+                document.getElementById("description").textContent = burgerinfo["description"];
+            }
+            getburger()
+            function toggleMode() {
+                var element = document.body;
+                element.classList.toggle("dark-mode");
+            }
+        </script>
     </div>
-    <script>
-        var jamesVar = 0;
-        function jamesImg () {
-            const element = document.getElementById("jamesimg");
-            if (jamesVar == 0) {
-                element.src = "/static/assets/james2.jpg";
-                jamesVar = 1
-            }
-            else {
-                element.src = "/static/assets/james1.jpg";
-                jamesVar = 0;
-            }
+</div>
+<script>
+    var jamesVar = 0;
+    function jamesImg () {
+        const element = document.getElementById("jamesimg");
+        if (jamesVar == 0) {
+            element.src = "/static/assets/james2.jpg";
+            jamesVar = 1
         }
-    </script>
-{% endblock %}
+        else {
+            element.src = "/static/assets/james1.jpg";
+            jamesVar = 0;
+        }
+    }
+</script>
+</body>
 </html>
