--- a/templates/aboutnathan.html
+++ b/templates/aboutnathan.html
@@ -21,6 +21,8 @@
         <img src="/static/assets/nathan2.jpg" width="50%"  id="nathanimg" onclick="nathanImg()" >
     </div>
     <div class="col-sm">
+        <h1>About Me</h1>
+        <p>Hello, my name is Nathan Manangan. I'm Filipino, but I don't speak it because I was too lazy to learn the language when I was young, and there is no class at Del Norte. I'm currently a Sophomore enrolled at this school, and I enjoy coding from time to time. I like hanging out and playing games with my friends and I enjoy spending time with my family.</p>
         <h1>API</h1>
         <p>TOTAL DEATHS:</p>
         <div id="deaths"></div>
