--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -31,5 +31,21 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <a class="nav-link" href="/search">Search<span class="sr-only">(current)</span></a>
             </li>
         </ul>
+        <div class="btn-group">
+            <!-- Clock display -->
+            <div class="px-3 text-dark">
+                <span id="clock"></span>
+            </div>
+            <!-- Dark mode action -->
+            <div class="form-check form-switch">
+                <input type="checkbox" onclick="darkFunction()" class="form-check-input" id="darkSwitch">
+                <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+            </div>
+        </div>
+
+        {% block navbar_script %}
+            <!-- Navigation bar JavaScript support -->
+            <script src={{  url_for("static", filename="/navbar.js", version='140') }}></script>
+        {% endblock %}
     </div>
 </nav>
