--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -43,7 +43,9 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('bpranav.dogs') }}">Dogs Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bpranav.birds') }}">Birds Adoption</a>
+                    <a class="dropdown-item" href="{{ url_for('bchase.cats') }}">Cats Adoption</a>
                     <a class="dropdown-item" href="{{ url_for('bcolin.imageCarousel') }}">Meet Some Pets</a>
+                    <a class="dropdown-item" href="{{ url_for('bchase.Enclosures') }}">Enclosures</a>
                 </div>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
